--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, testng ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, testng ]
 
 jobs:
   build:
