--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ repositories {
 }
 
 dependencies {
-
+    testImplementation 'org.testng:testng:7.4.0'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
