--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ main, junit4 ]
+    branches: [ main, junit4-platform ]
   pull_request:
-    branches: [ main, junit4 ]
+    branches: [ main, junit4-platform ]
 
 jobs:
   build:
